# kagura-engineer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/moat/: m3-memory-uplift-eval.md
docs/plan/: plan-2-setup.md  plan-3-run-impl.md  plan-3-run.md  plan-4-review.md  plan-5-local-memory.md
docs/superpowers/plans/: 2026-06-08-failover-memory.md  2026-06-08-memory-auto-store.md  2026-06-10-brain-backend-selection.md
docs/superpowers/specs/: 2026-06-08-failover-memory-design.md  2026-06-08-memory-auto-store-design.md  2026-06-10-brain-backend-selection-design.md  2026-06-11-execution-profile-visibility-design.md  2026-06-11-first-install-ux-design.md
skills/doctor/: SKILL.md
skills/eval/: SKILL.md
skills/goal/: SKILL.md
skills/init/: SKILL.md
skills/review/: SKILL.md
skills/run/: SKILL.md
skills/setup/: SKILL.md
src/kagura_engineer/: __init__.py  _http.py  _launch.py  cli.py  config.py  mcp.py  proc.py  profile.py
src/kagura_engineer/doctor/: checks.py  registry.py  render.py
src/kagura_engineer/eval/: __init__.py  metrics.py  render.py  result.py
src/kagura_engineer/goal/: __init__.py  issues.py  render.py  result.py
src/kagura_engineer/review/: __init__.py  context.py  envelope.py  fixer.py  loop.py  render.py  result.py  reviewer.py
src/kagura_engineer/run/: __init__.py  brain_select.py  failover_memory.py  gate.py  local_memory.py  memory.py  render.py  result.py  workflow.py  worktree.py
src/kagura_engineer/setup/: __init__.py  auth.py  claude.py  gh.py  git.py  install.py  memory_auth.py  memory_cloud.py  memory_mcp.py  ollama.py  platform.py  render.py  result.py  scaffold.py
tests/: _constants.py  conftest.py  test_cli.py  test_config.py  test_http.py  test_launch.py  test_launcher_seam.py  test_plugin.py  test_proc.py  test_profile.py  test_version.py
tests/doctor/: test_checks.py  test_memory_context.py  test_ollama_claude_hint.py  test_registry.py  test_render.py  test_result.py
tests/eval/: test_cli.py  test_harness.py  test_metrics.py  test_render.py  test_result.py
tests/goal/: test_goal.py  test_issues.py  test_render.py
tests/review/: test_context.py  test_envelope.py  test_fixer.py  test_loop.py  test_orchestrator.py  test_render.py  test_result.py  test_reviewer.py
tests/run/: test_brain_select.py  test_failover_memory.py  test_gate.py  test_local_memory.py  test_memory.py  test_orchestrator.py  test_render.py  test_result.py  test_workflow.py  test_worktree.py
tests/setup/: test_auth.py  test_claude.py  test_gh.py  test_git.py  test_install.py  test_memory_auth.py  test_memory_cloud.py  test_memory_mcp.py  test_ollama.py  test_orchestrator.py  test_platform.py  test_render.py  test_result.py  test_scaffold.py
