[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagura-engineer"
version = "0.1.0"
description = "Autonomous coding harness over Claude Code + Kagura Memory"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
kagura-engineer = "kagura_engineer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kagura_engineer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
